--- a/src/style.css
+++ b/src/style.css
@@ -200,7 +200,11 @@ section h2 span{color:var(--red)}
 
 /* CUSTOM CREATION */
 .create{
-  background:radial-gradient(circle at center,#000,#000 60%);
+  /*background:radial-gradient(circle at center,#000,#000 60%);*/
+    background-image: url("../img/Red\ and\ White\ Modern\ Fashion\ Collection\ Presentation (1).png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fix
 }
 .create-layout{
   margin-top:4rem;
@@ -238,27 +242,39 @@ section h2 span{color:var(--red)}
   background:rgba(255,255,255,.03);
   border-radius:30px;
   padding:1.5rem;
+  margin-top: 10px;
 }
 .selection img{
   width:100%;
   border-radius:20px;
+
 }
 
-.preview-box{
-    margin-top:20px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:300px;
+.preview-container{
+  position:relative;
+  width:100%;
+  max-height:350px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
-.preview-roupa{
-    width:180px;
-    height:250px;
-    background:#ccc;
-    border-radius:20px;
-    transition:0.4s;
-    box-shadow:0 20px 40px rgba(0,0,0,0.4);
+.preview-container img{
+  max-height:320px;
+  object-fit:contain;
+  position:relative;
+  z-index:2;
+  filter: brightness(1.05);
+}
+
+#color-overlay{
+  position:absolute;
+  inset:0;
+  background:#ffffff;
+  mix-blend-mode:multiply;
+  opacity:0.85;
+  z-index:3;
+  pointer-events:none;
 }
 
 
