--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ header nav a{
   background-color: green;
   width: 60vw;
   height: 70vh;
-  background: url(/img/ChatGPT\ Image\ 17\ de\ fev.\ de\ 2026\,\ 11_16_27.png);
+  background: url(../img/ChatGPT\ Image\ 17\ de\ fev.\ de\ 2026\,\ 11_16_27.png);
   background-size: cover;
   background-position: right;
 }
@@ -148,42 +148,14 @@ header nav a{
   position:absolute;
   right:0;
   bottom:0;
-  height:90%;
+  height: 90%;
   display:flex;
   align-items:flex-end;
 }
 
 .hero-right img{
-  height:100%;
+  height: 100%;
   object-fit:contain;
-}
-
-.btn{
-  background: linear-gradient(
-  135deg,
-  #953535,
-  #c02b2b,
-  #9e1b1b
-);
-  background-blend-mode: var(--red);
-  padding:.6rem 1.4rem;
-  border-radius:30px;
-  color:#fff;
-  text-decoration:none;
-}
-
-.btn-historia{
-      background: linear-gradient(
-  135deg,
-  #201d1d,
-  #595959,
-  #292626
-);
-  background-blend-mode: overlay;
-  padding:.6rem 1.4rem;
-  border-radius:30px ;
-  color:#fff;
-  text-decoration:none;
 }
 /* STATS */
 .stats{
