mudanca de nome da imagem

--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ header nav a{
   background-color: green;
   width: 60vw;
   height: 70vh;
-  background: url(../img/ChatGPT\ Image\ 17\ de\ fev.\ de\ 2026\,\ 11_16_27.png);
+  background: url(../img/hero-modelo.png);
   background-size: cover;
   background-position: right;
 }
