--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,6 @@ header{
   justify-content:space-between;
   align-items:center;
   margin:5px;
-  padding:2px 5px;
   border-radius: 15px;
   background:rgba(0,0,0,0.6);
   backdrop-filter:blur(10px);
@@ -58,10 +57,11 @@ header{
 header nav {
     display: flex;
     align-items: center;
+  
 }
 header nav a{
     color: #ba992e;
-    padding: 10px;
+    padding: 9px;
     text-decoration: none;
 }
 
@@ -74,6 +74,7 @@ header nav a{
 .logo{
   font-family:'Playfair Display',serif;
   font-size:1.4rem;
+  margin: 2px;
 }
 .logo span{color:var(--red)}
 
@@ -96,9 +97,8 @@ header nav a{
 }
 
 /* Ajuste do título */
-.hero-left h1{
-  font-size:4.5rem;
-  margin:1rem 0;
+.hero-left h1 {
+  font-size: 4.5rem;
 }
 
 /* Stats alinhadas */
@@ -295,14 +295,67 @@ section h2 span{color:var(--red)}
 .selection img{
   width:100%;
   border-radius:20px;
-
 }
-
 
 .preview-image img{
   transition: opacity 0.3s ease;
 }
 
+.btn-comprar{
+  margin-top:20px;
+  padding:1rem 2rem;
+  border:none;
+  border-radius:30px;
+  background:linear-gradient(135deg,#953535,#c02b2b,#9e1b1b);
+  color:white;
+  font-weight:600;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.btn-comprar:hover{
+  transform:scale(1.05);
+}
+
+/* Modal */
+.modal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  visibility:hidden;
+  opacity:0;
+  transition:0.3s;
+}
+
+.modal-conteudo{
+  background:#111;
+  padding:2rem 3rem;
+  border-radius:20px;
+  text-align:center;
+  border:1px solid #ba992e;
+}
+
+.modal-conteudo h3{
+  margin-bottom:1rem;
+}
+
+.modal-conteudo button{
+  margin-top:1rem;
+  padding:0.6rem 1.5rem;
+  border:none;
+  border-radius:20px;
+  background:#ba992e;
+  cursor:pointer;
+}
+
+/* Modal ativo */
+.modal.ativo{
+  visibility:visible;
+  opacity:1;
+}
 
 .footer {
   margin-top: 6rem;
@@ -362,6 +415,9 @@ section h2 span{color:var(--red)}
 /* Responsivo */
 
 @media (max-width: 480px) {
+  .hero-left h1 {
+  font-size: 3.5rem;
+  }
 
   .item{
     padding: 1.5rem;
@@ -374,8 +430,10 @@ section h2 span{color:var(--red)}
 }
 
 @media (max-width: 768px) {
+
+
   .img-hero{
-    width:80vw;
+    height: 80vh;
   }
 
   .footer-container {
@@ -392,4 +450,47 @@ section h2 span{color:var(--red)}
 @media(max-width:900px){
   .about{grid-template-columns:1fr}
   .create-layout{grid-template-columns:1fr}
+}
+
+@media (min-width: 1024px){
+  .create-layout{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .preview-create {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .steps {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .steps button {
+    width: 20%;
+  }
+
+  .items {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+  }
+
+  .item{
+    padding:2rem;
+    width: 100%;
+  }
+
+  .selection {
+    width: 100%;
+    margin: 0;
+    height: 85%;
+  }
+
+  .btn-comprar{
+    width: 100%;
+  }
+
 }
