--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 }
 *{margin:0;padding:0;box-sizing:border-box}
 body{
+  background-color: #0b0b0b;
   background-image: url("../img/Red\ and\ White\ Modern\ Fashion\ Collection\ Presentation.png");
   background-size: cover;
   background-position: center;
@@ -28,6 +29,7 @@ body::before {
 
 
 html {
+  background-color: #0b0b0b;
   scroll-behavior: smooth;
 }
 
@@ -80,7 +82,7 @@ header nav a{
 
 /* HERO */
 .hero{
-  height:100vh;
+  height:100dvh;
   position:relative;
   overflow:hidden;
 }
@@ -585,6 +587,7 @@ section h2 span{color:var(--red)}
 
   .preview-create {
     display: flex;
+    justify-content: center;
     gap: 1rem;
   }
 
@@ -622,7 +625,7 @@ section h2 span{color:var(--red)}
 
 @media (min-width: 1024px){
   .img-hero{
-    width: 40svw;
-    height:84%;
+    width: 60svw;
+    height:95%;
   }
 }
