--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,36 @@ header{
 
 }
 
+.whatsapp-float {
+  text-decoration: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #272827;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 28px;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+  z-index: 999;
+  transition: transform 0.3s ease;
+    animation: pulse 2s infinite;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
+}
+
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7); }
+  70% { box-shadow: 0 0 0 15px rgba(37,211,102, 0); }
+  100% { box-shadow: 0 0 0 0 rgba(37,211,102, 0); }
+}
+
 .div-header {
   display:flex;
   width: 90%;
@@ -68,9 +98,38 @@ header nav a{
 }
 
 
+
 header nav a{
     color: #ba992e;
     text-decoration: none;
+}
+
+header nav a:hover {
+  transition: .3s;
+  color:#866f23 ;
+}
+
+nav a {
+  position: relative;
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+}
+
+nav a::after {
+
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0; /* distância da linha */
+  width: 0%;
+  height: 2px;
+  background-color: #d4af37; /* dourado chique */
+  transition: width 0.4s cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+nav a:hover::after {
+  width: 100%;
 }
 
 .logo{
