--- a/src/style.css
+++ b/src/style.css
@@ -135,7 +135,7 @@ nav a:hover::after {
 .logo{
   font-family:'Playfair Display',serif;
   font-size:1.4rem;
-  margin: 2px;
+  margin: 5px;
 }
 .logo span{color:var(--red)}
 
@@ -287,7 +287,7 @@ section h2 span{color:var(--red)}
 }
 .diff-card{
   backdrop-filter:blur(10px);
-  background:rgba(255, 255, 255, 0.04);
+  background:rgba(0, 0, 0, 0.118);
   padding:2.5rem;
   border-radius:26px;
 }
@@ -338,6 +338,7 @@ section h2 span{color:var(--red)}
 .item{
   background:rgba(255,255,255,.03);
   padding:2rem;
+  border:1px solid rgba(238, 228, 119, 0.798);
   border-radius:26px;
   text-align:center;
 }
